{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 46,
  "lineage": "7752723f-d9e6-3420-0fe4-af43ff22d174",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819370969351:security-group/sg-04e6fa3418fc8a76e",
            "description": "Cluster communication with Worker Nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e6fa3418fc8a76e",
            "ingress": [],
            "name": "project1-dev-cluster-sg",
            "name_prefix": "",
            "owner_id": "819370969351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project1-dev-cluster-sg",
              "Project": "project1-dev",
              "kubernetes.io/cluster/project1": "owned"
            },
            "tags_all": {
              "Name": "project1-dev-cluster-sg",
              "Project": "project1-dev",
              "kubernetes.io/cluster/project1": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05aa642b743b69e0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.public_association_a",
            "module.vpc.aws_route_table_association.public_association_b",
            "module.vpc.aws_route_table_association.public_association_c",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_subnet.public_subnet_c",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819370969351:security-group/sg-0720934b1f2db9192",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow workers egress access to the Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0720934b1f2db9192",
            "ingress": [],
            "name": "project1-dev-workers-sg",
            "name_prefix": "",
            "owner_id": "819370969351",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project1-dev-workers-sg",
              "Project": "project1-dev",
              "kubernetes.io/cluster/project1": "owned"
            },
            "tags_all": {
              "Name": "project1-dev-workers-sg",
              "Project": "project1-dev",
              "kubernetes.io/cluster/project1": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05aa642b743b69e0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.public_association_a",
            "module.vpc.aws_route_table_association.public_association_b",
            "module.vpc.aws_route_table_association.public_association_c",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_subnet.public_subnet_c",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_node_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the Cluster API Server",
            "from_port": 443,
            "id": "sgrule-2102166924",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04e6fa3418fc8a76e",
            "self": false,
            "source_security_group_id": "sg-0720934b1f2db9192",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.public_association_a",
            "module.vpc.aws_route_table_association.public_association_b",
            "module.vpc.aws_route_table_association.public_association_c",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_subnet.public_subnet_c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_primary_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running on workers to send communication to cluster primary security group",
            "from_port": 0,
            "id": "sgrule-3822654687",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-04e6fa3418fc8a76e",
            "self": false,
            "source_security_group_id": "sg-0720934b1f2db9192",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.public_association_a",
            "module.vpc.aws_route_table_association.public_association_b",
            "module.vpc.aws_route_table_association.public_association_c",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_subnet.public_subnet_c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-3686899233",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0720934b1f2db9192",
            "self": false,
            "source_security_group_id": "sg-04e6fa3418fc8a76e",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.public_association_a",
            "module.vpc.aws_route_table_association.public_association_b",
            "module.vpc.aws_route_table_association.public_association_c",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_subnet.public_subnet_c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-2409902821",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0720934b1f2db9192",
            "self": false,
            "source_security_group_id": "sg-04e6fa3418fc8a76e",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.public_association_a",
            "module.vpc.aws_route_table_association.public_association_b",
            "module.vpc.aws_route_table_association.public_association_c",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_subnet.public_subnet_c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers Kubelets to receive communication from the cluster control plane.",
            "from_port": 10250,
            "id": "sgrule-2965251074",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0720934b1f2db9192",
            "self": false,
            "source_security_group_id": "sg-04e6fa3418fc8a76e",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.public_association_a",
            "module.vpc.aws_route_table_association.public_association_b",
            "module.vpc.aws_route_table_association.public_association_c",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_subnet.public_subnet_c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running on workers to receive communication from cluster primary security group",
            "from_port": 0,
            "id": "sgrule-3771128602",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0720934b1f2db9192",
            "self": false,
            "source_security_group_id": "sg-04e6fa3418fc8a76e",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.public_association_a",
            "module.vpc.aws_route_table_association.public_association_b",
            "module.vpc.aws_route_table_association.public_association_c",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_subnet.public_subnet_c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-3659231309",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0720934b1f2db9192",
            "self": false,
            "source_security_group_id": "sg-0720934b1f2db9192",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.public_association_a",
            "module.vpc.aws_route_table_association.public_association_b",
            "module.vpc.aws_route_table_association.public_association_c",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_subnet.public_subnet_c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819370969351:internet-gateway/igw-05af1cb69c36bb409",
            "id": "igw-05af1cb69c36bb409",
            "owner_id": "819370969351",
            "tags": {
              "Name": "project1-dev-igw",
              "Project": "project1-dev"
            },
            "tags_all": {
              "Name": "project1-dev-igw",
              "Project": "project1-dev"
            },
            "vpc_id": "vpc-05aa642b743b69e0f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819370969351:route-table/rtb-08bb96bf27b0933ec",
            "id": "rtb-08bb96bf27b0933ec",
            "owner_id": "819370969351",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05af1cb69c36bb409",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project1-dev-public-rt",
              "Project": "project1-dev",
              "kubernetes.io/cluster/project1-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "project1-dev-public-rt",
              "Project": "project1-dev",
              "kubernetes.io/cluster/project1-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05aa642b743b69e0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f0d206cb2bce614",
            "route_table_id": "rtb-08bb96bf27b0933ec",
            "subnet_id": "subnet-0fe2f2fdb20f47d9e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009d16fdeee7f958a",
            "route_table_id": "rtb-08bb96bf27b0933ec",
            "subnet_id": "subnet-0378187f3005b5d4d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0596614f5d7e40c3d",
            "route_table_id": "rtb-08bb96bf27b0933ec",
            "subnet_id": "subnet-01add8c318176b4c8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_c",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819370969351:subnet/subnet-0fe2f2fdb20f47d9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.111.128.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe2f2fdb20f47d9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819370969351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1a",
              "Name": "project1-dev-public-subnet-a",
              "Project": "project1-dev",
              "Tier": "Public",
              "kubernetes.io/cluster/project1-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "AZ": "us-east-1a",
              "Name": "project1-dev-public-subnet-a",
              "Project": "project1-dev",
              "Tier": "Public",
              "kubernetes.io/cluster/project1-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05aa642b743b69e0f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819370969351:subnet/subnet-0378187f3005b5d4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.111.129.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0378187f3005b5d4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819370969351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1b",
              "Name": "project1-dev-public-subnet-b",
              "Project": "project1-dev",
              "Tier": "Public",
              "kubernetes.io/cluster/project1-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "AZ": "us-east-1b",
              "Name": "project1-dev-public-subnet-b",
              "Project": "project1-dev",
              "Tier": "Public",
              "kubernetes.io/cluster/project1-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05aa642b743b69e0f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819370969351:subnet/subnet-01add8c318176b4c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.111.130.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01add8c318176b4c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "819370969351",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "AZ": "us-east-1c",
              "Name": "project1-dev-public-subnet-c",
              "Project": "project1-dev",
              "Tier": "Public",
              "kubernetes.io/cluster/project1-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "AZ": "us-east-1c",
              "Name": "project1-dev-public-subnet-c",
              "Project": "project1-dev",
              "Tier": "Public",
              "kubernetes.io/cluster/project1-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05aa642b743b69e0f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:819370969351:vpc/vpc-05aa642b743b69e0f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.111.0.0/16",
            "default_network_acl_id": "acl-07690f604ea556c73",
            "default_route_table_id": "rtb-01febc4edaac20f06",
            "default_security_group_id": "sg-0b0b69a1444c0b242",
            "dhcp_options_id": "dopt-06f6785bfc72300c2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05aa642b743b69e0f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01febc4edaac20f06",
            "owner_id": "819370969351",
            "tags": {
              "Name": "project1-dev-vpc",
              "Project": "project1-dev",
              "kubernetes.io/cluster/project1-dev": "shared"
            },
            "tags_all": {
              "Name": "project1-dev-vpc",
              "Project": "project1-dev",
              "kubernetes.io/cluster/project1-dev": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}